# hum-helix

./: .dockerignore  .gitignore  Dockerfile  README.md  benchmark.config.yaml  benchmark.py  docker-compose.yaml  main.py  performance.yaml  pyproject.toml  setup.cfg  transcription-test.py
docs/: API.md  BENCHMARKS.md
src/benchmarks/configs/: benchmark.config.yaml
src/benchmarks/scripts/: benchmark.py
src/hum_helix/benchmarks/scripts/: benchmark.py  timer.py
src/hum_helix/benchmarks/viz/: dashboard.py
src/hum_helix/server/: README.md  deps.py  main.py  pydantic_types.py
src/hum_helix/server/routers/: audio.py  models.py
