[project]
name = "hum-helix"
version = "0.1.0"
description = "hacked stt whisper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "faster-whisper>=1.2.0",
    "matplotlib>=3.10.5",
    "pandas>=2.3.2",
    "pyyaml>=6.0.2",
    "streamlit>=1.49.0",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]