[project]
name = "hum-helix"
version = "0.1.0"
description = "hacked stt whisper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "faster-whisper>=1.2.0",
    "hatchling>=1.27.0",
    "matplotlib>=3.10.5",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "streamlit>=1.49.0",
    "uvicorn>=0.35.0",
    "watchfiles>=1.1.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hum_helix"]

[tool.hatch.build.targets.sdist]
include = ["src/hum_helix", "pyproject.toml", "README.md"]

[project.scripts]
start-server = "hum_helix.server.main:main"